
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct timeval {int member_1; int member_0; } ;
struct TYPE_2__ {unsigned long s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int server ;
typedef int fd_set ;
typedef int error ;


 int AF_INET ;
 scalar_t__ EINPROGRESS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int F_GETFL ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_ERROR ;
 int TIMEOUT ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int debug (char*) ;
 scalar_t__ errno ;
 int fcntl (int,int ,int) ;
 int fprintf (int ,char*) ;
 int getsockopt (int,int ,int ,int*,int*) ;
 int htons (unsigned short) ;
 int memset (struct sockaddr_in*,int,int) ;
 int perror (char*) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int connect_to_host( unsigned long ip, unsigned short port )
{

        int ret, flags, s ;
        struct sockaddr_in server ;

        memset( &server, 0x0, sizeof(server) );

        server.sin_port = htons ( port );
        server.sin_family = AF_INET ;
        server.sin_addr.s_addr = ip ;

        if ((s = socket(AF_INET, SOCK_STREAM, 0)) == -1 ) {
                perror("[-] Socket");
                return -1 ;
        }





        if ((flags = fcntl (s, F_GETFL, 0)) == -1 ) {
                close( s );
                return -1;
        }

        if (fcntl(s, F_SETFL, flags | O_NONBLOCK) == -1) {
                close( s );
                return -1;
        }

        ret = connect(s, (struct sockaddr *)&server, sizeof(server));

        if ( ret < 0 )
        {
                if ( errno != EINPROGRESS ) {
                        close( s );
                        return -1;
                }
                else
                {
                        int n ;
                        struct timeval tv = { TIMEOUT, 0 };
                        fd_set rset, wset;

                        FD_ZERO( &rset );
                        FD_ZERO( &wset );
                        FD_SET( s, &rset );
                        FD_SET( s, &wset );

                        if ((n = select( s + 1, &rset, &wset, ((void*)0), &tv)) == -1 ) {
                                perror("[-] Select");
                                return -1;
                        }



                        if (n == 0) {
                                close( s );
                                fprintf(stderr,"[-] Timeout\n");
                                return -1;
                        }

                        if (FD_ISSET( s, &rset ) || FD_ISSET( s, &wset ))
                        {
                                int error = 0 ;
                                int len = sizeof( error );
                                if (getsockopt(s, SOL_SOCKET, SO_ERROR, &error, &len) == -1) {
                                        perror("[-] Getsockopt");
                                        return -1;
                                }
                                if (error != 0) {
                                        debug("[*] SO_ERROR != 0\n");
                                        return -1;
                                }
                        }
                        else
                        {
                                return -1 ;
                        }
                }
        }



        if ( fcntl(s, F_SETFL, flags) == -1 )
                return -1;
        else
                return s;
}
